Restructure rulelist to accept a list of Expr which can be analyzed prior to evaluation

--- a/StockBoxAssociations/StockBoxAssociations.csproj
+++ b/StockBoxAssociations/StockBoxAssociations.csproj
@@ -11,4 +11,7 @@
   <ItemGroup>
     <Folder Include="Tokens\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StockBoxValidation\StockBoxValidation.csproj" />
+  </ItemGroup>
 </Project>
