Began creating RiskProfile and added some cloning methods for Actions/States to be handled from the domaincontroller

--- a/StockBoxAssociations/StockBoxAssociations.csproj
+++ b/StockBoxAssociations/StockBoxAssociations.csproj
@@ -7,9 +7,11 @@
 
   <ItemGroup>
     <None Remove="Tokens\" />
+    <None Remove="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tokens\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StockBoxValidation\StockBoxValidation.csproj" />
