Created MessageQueue and Alert action beginnings Restructured BacktestController PerformSetupActions and Setup.PerformActions to aggregate action and responses

--- a/StockBox/StockBox.csproj
+++ b/StockBox/StockBox.csproj
@@ -67,5 +67,6 @@
     <ProjectReference Include="..\StockBoxData\StockBoxData.csproj" />
     <ProjectReference Include="..\StockBoxConfiguration\StockBoxConfiguration.csproj" />
     <ProjectReference Include="..\StockBoxInterpreter\StockBoxInterpreter.csproj" />
+    <ProjectReference Include="..\StockBoxBase\StockBoxBase.csproj" />
   </ItemGroup>
 </Project>
