Fixed eCrossOver exception, not accounting for Left/Right being a Literal, rather than a BinaryExpression. This fixed the 0 Position issue for backtesting w/ indicators.
Added a new test class OptionList<T> to provide an Option, rather than [T] on T? return
List methods and [idx] getters

--- a/StockBoxBase/StockBoxBase.csproj
+++ b/StockBoxBase/StockBoxBase.csproj
@@ -7,8 +7,10 @@
 
   <ItemGroup>
     <None Remove="Utilities\" />
+    <None Remove="Types\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Utilities\" />
+    <Folder Include="Types\" />
   </ItemGroup>
 </Project>
