Cleaned up the Deedle to DataPointList execution path to remove the rest of the scattered Deedle references from the codebase

--- a/StockBoxValidation/StockBoxValidation.csproj
+++ b/StockBoxValidation/StockBoxValidation.csproj
@@ -5,4 +5,7 @@
     <RootNamespace>StockBox.Validation</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
 </Project>
