--- a/StockBoxData/StockBoxData.csproj
+++ b/StockBoxData/StockBoxData.csproj
@@ -23,6 +23,8 @@
 		<None Remove="Scraper\Providers\Helpers\" />
 		<None Remove="Scraper\Helpers\" />
 		<None Remove="Context\Providers\" />
+		<None Remove="DataFrames\" />
+		<None Remove="SbFrames\Helpers\" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Deedle" Version="2.5.0" />
@@ -45,6 +47,8 @@
 		<Folder Include="Scraper\Providers\Helpers\" />
 		<Folder Include="Scraper\Helpers\" />
 		<Folder Include="Context\Providers\" />
+		<Folder Include="DataFrames\" />
+		<Folder Include="SbFrames\Helpers\" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\StockBoxConfiguration\StockBoxConfiguration.csproj" />
