--- a/StockBox_UnitTests/StockBox_UnitTests.csproj
+++ b/StockBox_UnitTests/StockBox_UnitTests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+	<Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
